; ModuleID = '/home/carl/AnghaBench/obs-studio/plugins/mac-vth264/extr_encoder.c_get_cached_pixel_buffer.c'
source_filename = "/home/carl/AnghaBench/obs-studio/plugins/mac-vth264/extr_encoder.c_get_cached_pixel_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vt_h264_encoder = type { i32, i32 }

@kCVReturnError = common dso_local global i32 0, align 4
@kCVImageBufferYCbCrMatrixKey = common dso_local global i32 0, align 4
@kCVAttachmentMode_ShouldPropagate = common dso_local global i32 0, align 4
@kCVImageBufferColorPrimariesKey = common dso_local global i32 0, align 4
@kCVImageBufferColorPrimaries_ITU_R_709_2 = common dso_local global i32 0, align 4
@kCVImageBufferTransferFunctionKey = common dso_local global i32 0, align 4
@kCVImageBufferTransferFunction_ITU_R_709_2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @get_cached_pixel_buffer(%struct.vt_h264_encoder* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.vt_h264_encoder*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.vt_h264_encoder* %0, %struct.vt_h264_encoder** %4, align 8
  store i32* %1, i32** %5, align 8
  %10 = load %struct.vt_h264_encoder*, %struct.vt_h264_encoder** %4, align 8
  %11 = getelementptr inbounds %struct.vt_h264_encoder, %struct.vt_h264_encoder* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @VTCompressionSessionGetPixelBufferPool(i32 %12)
  store i32 %13, i32* %7, align 4
  %14 = load i32, i32* %7, align 4
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %2
  %17 = load i32, i32* @kCVReturnError, align 4
  store i32 %17, i32* %3, align 4
  br label %44

18:                                               ; preds = %2
  %19 = load i32, i32* %7, align 4
  %20 = call i32 @CVPixelBufferPoolCreatePixelBuffer(i32* null, i32 %19, i32* %8)
  %21 = call i32 @STATUS_CHECK(i32 %20)
  %22 = load %struct.vt_h264_encoder*, %struct.vt_h264_encoder** %4, align 8
  %23 = getelementptr inbounds %struct.vt_h264_encoder, %struct.vt_h264_encoder* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @obs_to_vt_colorspace(i32 %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* @kCVImageBufferYCbCrMatrixKey, align 4
  %28 = load i32, i32* %9, align 4
  %29 = load i32, i32* @kCVAttachmentMode_ShouldPropagate, align 4
  %30 = call i32 @CVBufferSetAttachment(i32 %26, i32 %27, i32 %28, i32 %29)
  %31 = load i32, i32* %8, align 4
  %32 = load i32, i32* @kCVImageBufferColorPrimariesKey, align 4
  %33 = load i32, i32* @kCVImageBufferColorPrimaries_ITU_R_709_2, align 4
  %34 = load i32, i32* @kCVAttachmentMode_ShouldPropagate, align 4
  %35 = call i32 @CVBufferSetAttachment(i32 %31, i32 %32, i32 %33, i32 %34)
  %36 = load i32, i32* %8, align 4
  %37 = load i32, i32* @kCVImageBufferTransferFunctionKey, align 4
  %38 = load i32, i32* @kCVImageBufferTransferFunction_ITU_R_709_2, align 4
  %39 = load i32, i32* @kCVAttachmentMode_ShouldPropagate, align 4
  %40 = call i32 @CVBufferSetAttachment(i32 %36, i32 %37, i32 %38, i32 %39)
  %41 = load i32, i32* %8, align 4
  %42 = load i32*, i32** %5, align 8
  store i32 %41, i32* %42, align 4
  store i32 1, i32* %3, align 4
  br label %44

43:                                               ; No predecessors!
  store i32 0, i32* %3, align 4
  br label %44

44:                                               ; preds = %43, %18, %16
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @VTCompressionSessionGetPixelBufferPool(i32) #1

declare dso_local i32 @STATUS_CHECK(i32) #1

declare dso_local i32 @CVPixelBufferPoolCreatePixelBuffer(i32*, i32, i32*) #1

declare dso_local i32 @obs_to_vt_colorspace(i32) #1

declare dso_local i32 @CVBufferSetAttachment(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
